--- a/src/content/docs/cloudflare-one/connections/connect-devices/warp/user-side-certificates/manual-deployment.mdx
+++ b/src/content/docs/cloudflare-one/connections/connect-devices/warp/user-side-certificates/manual-deployment.mdx
@@ -305,6 +305,8 @@ For information on installing a Cloudflare certificate for organizations, refer 
 
 ### Python
 
+Depending on which version of Python you have installed, you may need to use either the `python` or `python3` command.
+
 #### Python on Windows
 
 The command to install the certificate with Python on Windows automatically includes `pip` and `certifi` (the default certificate bundle for certificate validation).
@@ -320,10 +322,10 @@ The command to install the certificate with Python on Windows automatically incl
 1. In a terminal, install the `certifi` package:
 
    ```sh
-   pip install certifi
+   python -m pip install certifi
    ```
 
-2. Identify the CA store:
+2. Identify the CA store. For example:
 
    ```sh
    python -m certifi
