--- a/src/content/docs/cloudflare-one/connections/connect-devices/warp/user-side-certificates/manual-deployment.mdx
+++ b/src/content/docs/cloudflare-one/connections/connect-devices/warp/user-side-certificates/manual-deployment.mdx
@@ -305,7 +305,7 @@ For information on installing a Cloudflare certificate for organizations, refer 
 
 ### Python
 
-Depending on which version of Python you have installed, you may need to use either the `python` or `python3` command.
+Depending on which version of Python you have installed and your configuration, you may need to use either the `python` or `python3` command. If you use [virtual environments](https://docs.python.org/3/library/venv.html), you will need to repeat the following steps within each virtual environment.
 
 #### Python on Windows
 
